[project]
name = "datachat"
version = "0.1.0"
description = "Chat with any dataset — upload or link a CSV/Excel, then ask; a LangGraph + OpenRouter data-analyst agent runs sandboxed pandas/plotly code and plots the answers. Built on Fast Dash."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [{ name = "Kedar Dabhadkar" }]
dependencies = [
    "fast-dash[langstage]>=0.5.4",
    "langgraph>=0.2.60",
    "langchain-openai>=0.2",
    "langchain-core>=0.3",
    "pandas>=2.0",
    "numpy>=1.26",
    "plotly>=5.20",
    "pyarrow>=15.0",     # df <-> subprocess sandbox transfer (parquet)
    "openpyxl>=3.1",     # .xlsx reading
]

[project.optional-dependencies]
prod = [
    "gunicorn>=22.0; sys_platform != 'win32'",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["analyst"]
